# dryad

./: .gitignore  Cargo.toml
src/: main.rs  uci.rs
src/mcts/: cache.rs  mod.rs  node.rs  params.rs  ptrs.rs  search.rs  search_driver.rs  time_manager.rs  tree.rs
src/movegen/: action.rs  board.rs  display.rs  fen.rs  genmoves.rs  history.rs  mod.rs  perft.rs  types.rs  zobrist.rs
src/nn/: batch.rs  kn_net.rs  mod.rs  network.rs  onnx_tensorrt.rs  policy_map.rs
