[package]
name = "dryad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
anyhow = "1.0.70"
static_init = "1.0.3"
rand = "0.8.5"
arrayvec = "0.7.4"
fast-math = "0.1.1"
crossbeam = "0.8.4"
pyrrhic-rs = "0.2.0"
auto_ops = "0.3.0"
smallvec = "1.13.2"
parking_lot = "0.12.3"
ort = { git = "https://github.com/pykeio/ort", features = ["tensorrt"] }
clap = { version = "4.5.9"}

[profile.dev]
overflow-checks = false

[profile.release]
debug = true
